--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-animations": "^0.3.2",
     "react-scripts": "5.0.1",
-    "react-text-loop": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
